--- a/package.json
+++ b/package.json
@@ -2,32 +2,34 @@
   "name": "my-app",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "dev": "ng serve --open"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.0",
-    "@angular/common": "^6.1.0",
-    "@angular/compiler": "^6.1.0",
-    "@angular/core": "^6.1.0",
-    "@angular/forms": "^6.1.0",
-    "@angular/http": "^6.1.0",
-    "@angular/platform-browser": "^6.1.0",
-    "@angular/platform-browser-dynamic": "^6.1.0",
-    "@angular/router": "^6.1.0",
-    "core-js": "^2.5.4",
-    "rxjs": "^6.0.0",
-    "zone.js": "~0.8.26"
+    "@angular/animations": "9.1.0",
+    "@angular/cdk": "9.1.0",
+    "@angular/common": "9.1.0",
+    "@angular/compiler": "9.1.0",
+    "@angular/core": "9.1.0",
+    "@angular/forms": "9.1.0",
+    "@angular/material": "9.1.0",
+    "@angular/platform-browser": "9.1.0",
+    "@angular/platform-browser-dynamic": "9.1.0",
+    "@angular/router": "9.1.0",
+    "@angular-devkit/schematics": "9.1.0",
+    "@angular/localize": "9.1.0",
+    "graphql": "^15.4.0",
+    "graphql-tag": "^2.11.0",
+    "resize-observer-polyfill": "^1.5.0",
+    "tslib": "^1.10.0",
+    "core-js": "2.6.9",
+    "rxjs": "6.5.4",
+    "zone.js": "0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.0",
-    "@angular/cli": "~6.1.2",
-    "@angular/compiler-cli": "^6.1.0",
+    "@angular-devkit/build-angular": "0.901.0",
+    "@angular/cli": "9.1.0",
+    "@angular/compiler-cli": "9.1.0",
     "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
@@ -42,7 +44,14 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "tslint": "6.1.0",
+    "typescript": "3.8.3",
+    "@types/highlight.js": "^9.1.9",
+    "core-js": "^2.6.9",
+    "highlight.js": "^9.17.1",
+    "lodash": "^4.17.0",
+    "moment": "^2.25.3",
+    "moment-timezone": "^0.5.27",
+    "@types/selenium-webdriver": "^3.0.17"
   }
 }
